--- a/caviar.html
+++ b/caviar.html
@@ -37,7 +37,7 @@
 
         <div class="background-container">
             <img src="images/beige.jpg">
-            <img class="moving-image-background" src="images/overlay2.png">
+            <img class="moving-image-background" src="images/Caviar.png">
 
             <div class="vertical-text">
               Made by Robin.
