--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
     <div class="maincard-container" class="hidden">
         <div class="maincard">
         
-            <img src="images/beige.jpg">
+            <img src="images/overlay.png">
             <img class="portrait" src="images/portrait.jpg" alt="Overlay Image 1">
             <img class="moving-image-maincard" src="images/overlay.png">
             <div class="overlay-text-visible" opacity>
-                <h1 style="color: #39312C; "> Robin Zeitlin</h1> 
-                <p style="color: #39312C; "> Game Programmer currently studying at FutureGames. Seeking oppurtunities to contribute to game projects, learn new things and gain valueable experience. </p>
+                <h1 style="color: #ffffff; "> Robin Zeitlin</h1> 
+                <p style="color: #ffffff; "> Game Programmer currently studying at FutureGames. Seeking oppurtunities to contribute to game projects, learn new things and gain valueable experience. </p>
                 <div class="container">
                   <div class="box">C#</div>
                   <div class="box">C++</div>
@@ -86,7 +86,7 @@
 
     <div style="width: 100%; height: 100%; transform: translate(0, -30%); overflow: visible;">
       <svg x="50" y="200vh" width="100%" height="100%" id="svg" viewBox="0 0 1440 390" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150">
-        <path style="fill: #76817E" d="M 0,400 L 0,150 C 56.58118556701031,196.92783505154637 113.16237113402062,243.85567010309276 165,223 C 216.83762886597938,202.14432989690724 263.9317010309278,113.50515463917526 331,82 C 398.0682989690722,50.49484536082474 485.11082474226805,76.12371134020619 550,83 C 614.889175257732,89.87628865979381 657.625,78 717,85 C 776.375,92 852.3891752577321,117.87628865979383 907,125 C 961.6108247422679,132.12371134020617 994.8182989690722,120.49484536082471 1055,122 C 1115.1817010309278,123.50515463917529 1202.3376288659795,138.14432989690724 1271,145 C 1339.6623711340205,151.85567010309276 1389.8311855670104,150.92783505154637 1440,150 L 1440,400 L 0,400 Z" stroke="none" stroke-width="0" fill="#758280" class="transition-all duration-300 ease-in-out delay-150 path-0" transform="rotate(-180 720 200)"></path>
+        <path style="fill: #424242" d="M 0,400 L 0,150 C 56.58118556701031,196.92783505154637 113.16237113402062,243.85567010309276 165,223 C 216.83762886597938,202.14432989690724 263.9317010309278,113.50515463917526 331,82 C 398.0682989690722,50.49484536082474 485.11082474226805,76.12371134020619 550,83 C 614.889175257732,89.87628865979381 657.625,78 717,85 C 776.375,92 852.3891752577321,117.87628865979383 907,125 C 961.6108247422679,132.12371134020617 994.8182989690722,120.49484536082471 1055,122 C 1115.1817010309278,123.50515463917529 1202.3376288659795,138.14432989690724 1271,145 C 1339.6623711340205,151.85567010309276 1389.8311855670104,150.92783505154637 1440,150 L 1440,400 L 0,400 Z" stroke="none" stroke-width="0" fill="#758280" class="transition-all duration-300 ease-in-out delay-150 path-0" transform="rotate(-180 720 200)"></path>
       </svg>
     </div>
 </div>
