Fix : Title of information box.

--- a/honker.html
+++ b/honker.html
@@ -323,7 +323,7 @@ public partial struct EntitySystem : ISystem
                           </div>
 
                           <div class="box">
-                            <h3 class="oswald-font">Input Display</h3>
+                            <h3 class="oswald-font">Image saver editor script.</h3>
                             <h3 class="click-this">Click Here</h3>
                               <div class="hidden-text">
                                 <div class="code-snippet">
