WIP : About me page added.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@
     <a class="hover-text" style="color: #6093ff"; href="https://github.com/RobinZeitlin?tab=repositories">Robin Zeitlin | Github</a>
     <p></p>
     <a class="hover-text" style="color: #6093ff"; href="mailto:robin.zeitlin@hotmail.com">robin.zeitlin@hotmail.com</a>
-    <p></p>
-    <a class="hover-text" style="color: #6093ff"; href="tel:+4670-835-6431">+4670-835-6431</a>
   </div>
   
   
@@ -67,7 +65,7 @@
             <img class="portrait" src="images/portrait.jpg" alt="Overlay Image 1">
             <img class="moving-image-maincard" src="images/overlay.png">
             <div class="overlay-text-visible" opacity>
-                <h1 style="color: #ffffff; "> Robin Zeitlin</h1> 
+                <h1 style="color: #ffffff; "> Robin Zeitlin</h1>
                 <p style="color: #ffffff; "> Game Programmer currently studying at FutureGames. Seeking oppurtunities to contribute to game projects, learn new things and gain valueable experience. </p>
                 <div class="container">
                   <div class="box">C#</div>
@@ -78,9 +76,9 @@
                   <div class="box">Html</div>
                   <div class="box">Css</div>
                 </div>
-           </div>
-        <div class="aboutmetext">
-          <p style="color:#0051ff" class="seymour-one-regular"> about me</p>
+                <br>
+                <a class="hover-text" style="color: #6093ff; font-size: 80%;" onclick="redirectTo('aboutme.html');">-> about me <-</a>
+              </div>
         </div>
         </div>
     </div>
@@ -91,6 +89,9 @@
       </svg>
     </div>
 </div>
+
+
+
 
 <div class="card-container">
 
@@ -142,7 +143,7 @@
   <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
   <div class="overlay-text">
       <h1>Rain Runner</h1> 
-       <h2>Colaboration 👥</h2>
+       <h2>Collaboration 👥</h2>
        <h2>Released : 2024-02-29</h2>
        <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
        <p style="text-align:left; padding-left:10px;"> • Steam Leaderboard</p>
