WIP : GP3 to portfolio

--- a/index.html
+++ b/index.html
@@ -111,6 +111,19 @@
     </div>
   </div> -->
 
+  <div class="card 1" onclick="redirectTo('GP3.html')">
+    <img src="images/GP3/placeholderGP3.png">
+    <img class="overlay-image-engine" src="images/GP3/UEIcon.jpg" alt="Overlay Image 1">
+    <img class="overlay-image-available" src="images/GP3/C++Logo.png" alt="Overlay Image 1">
+    <div class="overlay-text">
+        <h1>FruityWars</h1> 
+         <h2>10 👥</h2>
+         <h2 style="padding-left:10px; padding-right:10px;"> Made during my third game project at futuregames</h2>
+         <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
+         <p style="text-align:left; padding-left:10px;"> • Parabolic curve based throwing | • Mario like key and door system</p>
+    </div>
+  </div>
+
   <div class="card 1" onclick="redirectTo('honker.html')">
     <img src="images/Honker/honkershowcase.png">
     <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
