WIP : Uppdating "Fruity Wars"

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <img class="overlay-image-engine" src="images/GP3/UEIcon.jpg" alt="Overlay Image 1">
     <img class="overlay-image-available" src="images/GP3/C++Logo.png" alt="Overlay Image 1">
     <div class="overlay-text">
-        <h1>FruityWars</h1> 
+        <h1>FruityWars (WIP)</h1> 
          <h2>10 👥</h2>
          <h2 style="padding-left:10px; padding-right:10px;"> Made during my third game project at futuregames</h2>
          <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
