Fix : The goals for the projects, are now more in depth.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
          <h2>Will be released : 2024-05-15</h2>
          <p style="padding-left:10px; padding-right:10px;"> Third steam release, made in 1 month with the goal of learning Unitys Entity System.</p>
          <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
-         <p style="text-align:left; padding-left:10px;"> • Unity Entity System (DOTS) | • Editor tool image saver | • Editor tool goose "Wardrobe"</p>
+         <p style="text-align:left; padding-left:10px;"> • Entity Component System (ECS) | • Editor tool image saver</p>
     </div>
   </div>
 
