--- a/rainrunner.html
+++ b/rainrunner.html
@@ -61,10 +61,18 @@
                           <h2 class="oswald-font"; style="color: #E1E1E1" >Goals</h2>
                           <h2 class="click-this">Click Here</h2>
                             <div class="hidden-text">
-                                <p> 1. Simply to get better with steam integration.</p>
-                                <p> 2. Make a proper Steam Manager that I can reuse when making steam games.</p>
-                            </div>
+
+                            <h2>1. Improve Steam Integration Skills</h2>
+                                <p><strong>Objective:</strong> Gain proficiency in integrating Steam features into Unity projects.</p>
+                                <p><strong>Approach:</strong> Implement Steam leaderboard functionality, working through the Steamworks API and integration processes.</p>
+                                <p><strong>Result:</strong> Achieve a deeper understanding of Steam integration, improving my ability to add Steam features to future games.</p>
+
+                            <h2>2. Create a Reusable Steam Manager</h2>
+                                <p><strong>Objective:</strong> Develop a Steam Manager component that can be reused in future Steam games.</p>
+                                <p><strong>Approach:</strong> Design and code a drag-and-drop ready Steam integration component, containing simple Steam connection and achievement unlocking scriptable-objects.</p>
+                                <p><strong>Result:</strong> Have a ready-to-use Steam Manager that simplifies the integration of Steam features in upcoming projects, enhancing development efficiency.</p>
                         </div>
+                    </div>
 
                         <div class="my-line"></div>
 
