--- a/caviar.html
+++ b/caviar.html
@@ -71,12 +71,15 @@
                           <h2 class="oswald-font"; style="color: #E1E1E1" >Goals</h2>
                           <h2 class="click-this">Click Here</h2>
                           <div class="hidden-text">
-                              <p> 1. Learn AI behaviour such as behaviour trees.</p>
-                              <p> 2. Publish my second steam game.</p>
-                              <p> 3. Publish a game made in a month.</p>
-                              <div class="my-line"></div>
-                              <P> Ive succesfully looked into AI behavior and feel comfortable using it on a more intermediate level, the game will be published on the 16 of april.</P>
-                          </div>
+                            <h2>1. Learn AI Behavior Such as Behavior Trees</h2>
+                            <p><strong>Objective:</strong> Understand and implement AI behavior trees to create intelligent and responsive NPCs.</p>
+                            <p><strong>Approach:</strong> Study and apply behavior tree concepts, integrating them into the game's AI system.</p>
+                            <p><strong>Result:</strong> Develop NPCs that exhibit complex and lifelike behaviors, enhancing the overall gameplay experience.</p>
+
+                            <h2>2. Publish a Game Made in a Month</h2>
+                            <p><strong>Objective:</strong> Complete and publish a game within a one-month timeframe.</p>
+                            <p><strong>Approach:</strong> Utilize efficient project management and development practices to meet the tight deadline.</p>
+                            <p><strong>Result:</strong> Demonstrate my ability to rapidly develop and deliver a high-quality game.</p></div>
                         </div>
 
                           <div class="box">
