--- a/GP3.html
+++ b/GP3.html
@@ -50,7 +50,7 @@
 
                 <div class="smallContainer" opacity>
                     <div class="video" opacity>
-                      
+                      <iframe width="100%" height="70%" src="https://www.youtube.com/embed/k2MRmKqDr-E?si=6ymBO3dpgx1NGTuv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                       <div class="text-under-video">
 
                       <div style="display: flex;">
