Feature : Updated the pages and made them all more mobile friendly.

--- a/aboutme.html
+++ b/aboutme.html
@@ -19,18 +19,6 @@
           font-family: 'Seymour One', sans-serif;
         }
 
-        .rounded-image {
-            border-radius: 100%;
-            overflow: hidden;
-            object-fit: cover;
-            width: 30%;
-            height: 30%;
-            margin: 5%;
-            border-radius: 100%;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.6); /* Adjust the box-shadow as needed */
-            outline: 6px solid #be9351; /* Adjust the outline thickness and color as needed */
-        }
-
       </style>
 
 <link rel="stylesheet" href="prism.css" data-noprefix>
@@ -63,17 +51,46 @@
                     <div class="video" opacity>
                       <div class="text-under-video">
 
-                        <div style="display: flex; align-items: center;">
-
+                        <div class="intro">
                           <div class="rounded-image">
-                              <img src="images/portrait.jpg" style="width: 100%; height: 100%;" />
+                              <img src="images/portrait.jpg" alt="Robin Zeitlin">
                           </div>
-
-                          <div style="margin-left: 10px; display: flex; flex-direction: column; justify-content: center;">
-                            <h2 style="color: #fabf66;">Robin Zeitlin</h2>
-                            <p>Game Programmer currently studying at FutureGames. Seeking oppurtunities to contribute to game projects, learn new things and gain valueable experience.</p>
+                          <div class="intro-text">
+                              <h1>Robin Zeitlin | Gameplay Programmer</h1>
+                              <p>I am an incredibly passionate Gameplay Programmer with a love for learning and creating games. I've developed and released 4+ games on Steam and contributed to multiple others.</p>
+                              <p>I am currently studying Game Programming at FutureGames Stockholm where I've had the opportunity to work on several group projects involving groups of upwards of 17+ people.</p>
                           </div>
                       </div>
+
+                      <h2>Skills and Expertise</h2>
+                      <ul>
+                          <li><strong>Programming Languages:</strong> C++, C#</li>
+                          <li><strong>Game Engines:</strong> Unity, Unreal Engine</li>
+                          <li><strong>Specializations:</strong> Gameplay Programming </li>
+                          <li><strong>Soft Skills:</strong> Teamwork, Problem-Solving, Communication</li>
+                      </ul>
+
+                      <h2>Projects and Experience</h2>
+                      <ul>
+                          <li><h1 class="hover-text" style="color: #6093ff;" onclick="redirectTo('honker.html')">Honker</h1> - One of my monthly steam releases where I efficiently utilized Unitys ESC system to make a well optimised "Wheres Waldo" like game, while also implementing and handling SteamWorks compatibility.</li>
+                          <li><h1 class="hover-text" style="color: #6093ff;" onclick="redirectTo('Reberryon.html')">Reberryon</h1> - My Futuregames Game Project 3 where I developed multiple C++ based gameplay features, and then released it for free on steam.</li>
+                      </ul>
+
+                      <div class="intro">
+                        <div class="intro-text">
+                          <h2>Personal Interests</h2>
+                          <p>Im super into board games/roleplaying games. It all started with munchkin, but it quickly branched onto DND that ive been playing on and off for the past 4-5 years. And due to the fact that me and my friends had no previous experience with roleplaying games, I took it upon myself to learn some of the basic rules, and from then on ive been stuck as the groups Dungeon Master. This grew into a hobby of 3d printing and painting my own minatures, and constructing a small playing field using an old monitor to make the game feel more alive.</p>
+                          <p>And of course I love playing video games. It all started with Pokemon on a Red GameBoy and from then on I just havent been able to seperate myself from video games. My alltime favourite game is without a doubt Minecraft which I think has left a huge impact on how I design things today as ive always been known as the builder in my friend groups.</p>
+                        </div>
+                        <div class="information-image">
+                            <img src="https://via.placeholder.com/400" alt="Robin Zeitlin">
+                         </div>
+                    </div>
+                      
+                    <div class="section testimonials">
+                      <h2>Testimonials</h2>
+                      <p class="testimonial">"Working with [Your Name] was a pleasure. They brought a high level of creativity and expertise to our project." - [Colleague's Name]</p>
+                  </div>
 
                         <div class="my-line"></div>
                           <p></p>
