--- a/caviar.html
+++ b/caviar.html
@@ -27,16 +27,6 @@
 <div>
     <body>
 
-      <div class="corner-container">
-        <a class="hover-text" style="color: #6093ff" ; href="https://www.linkedin.com/in/robin-zeitlin-778a9127a/">Robin Zeitlin | LinkedIn</a>
-        <p></p>
-        <a class="hover-text" style="color: #6093ff" ;href="https://github.com/RobinZeitlin?tab=repositories">Robin Zeitlin | Github</a>
-        <p></p>
-        <a class="hover-text" style="color: #6093ff" ;href="mailto:robin.zeitlin@hotmail.com">robin.zeitlin@hotmail.com</a>
-        <p></p>
-        <a class="hover-text" style="color: #6093ff"; href="tel:+4670-835-6431">+4670-835-6431</a>
-      </div>
-
         <div class="background-container">
             <img src="images/beige.jpg">
             <img class="moving-image-background" src="images/Caviar.png">
@@ -51,19 +41,19 @@
 
                 <div class="smallContainer" opacity>
                     <div class="video" opacity>
-                      /*<iframe width="100%" height="70%" src="https://www.youtube.com/embed/rxnmJRQE6Mk?si=XByC7Z6yu9EnNU9f" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe width="100%" height="70%" src="https://www.youtube.com/embed/rxnmJRQE6Mk?si=XByC7Z6yu9EnNU9f" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <div class="text-under-video">
 
-                      <div style="display: flex;">
-                        <h1 style="font-size: 8vh; margin: 5%;">Caviar.</h1>
-                        <div style="margin-left: 10px;">
+                      <div class="container">
+                        <div class="header">
+                          <h1 style="font-size: 8vh; margin: 5%;">Caviar.</h1>
+                        </div>
+                        <div class="content">
                           <p>After the release of my first steam title BadDool. I decided to start releasing one game every month. But because its so important for me to learn new things, I decided to make these projects based on things I wanted to learn.</p>
                           <p>For this project my main focus was AI and more specifically Behaviour Trees. I came up with two concepts, but decided to go all in on fish behavior because it also lets me look into boids which seemed very interesting.</p>
-                          <p>I decided to document the process everyday in a "Dev Diary". So feel free to read more about the process under the dev Diary category. As always the components I built for this project will be available under my Component page.</p>
+                          <p>I decided to document the process everyday in a "Dev Diary". So feel free to read more about the process under the dev Diary category.</p>
                         </div>
                       </div>
-
-
                       
                       <div class="box-container">
                         
