--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                         <div class="box">Pun2</div>
                         <div class="box">Html</div>
                         <div class="box">Css</div>
+                        <div class="box">SteamWorks</div>
                     </div>
                     <br>
                     <a class="hover-text" style="color: #6093ff; font-size: 80%;" onclick="redirectTo('aboutme.html');">-> about me <-</a>
@@ -84,7 +85,8 @@
                     <h2>10 👥</h2>
                     <h2 style="padding-left:10px; padding-right:10px;"> Made during my third game project at FutureGames</h2>
                     <h3 style="text-align:left; padding-left:10px;"> I Programmed :</h3>
-                    <p style="text-align:left; padding-left:10px;">• Parabolic curve based throwing | • Mario like key and door system</p>
+                    <p style="text-align:left; padding-left:10px;">• Parabolic curve based throwing</p>
+                    <p style="text-align:left; padding-left:10px;">• Mario like key and door system</p>
                 </div>
             </div>
         </div>
@@ -100,7 +102,8 @@
                     <h2>Released : 2024-05-15</h2>
                     <p style="padding-left:10px; padding-right:10px;"> Third steam release, made in 1 month with the goal of learning Unity's Entity System.</p>
                     <h3 style="text-align:left; padding-left:10px;"> I Programmed :</h3>
-                    <p style="text-align:left; padding-left:10px;">• Entity Component System (ECS) | • Editor tool image saver</p>
+                    <p style="text-align:left; padding-left:10px;">• Entity Component System (ECS)</p>
+                    <p style="text-align:left; padding-left:10px;">• Editor tool image saver</p> 
                 </div>
             </div>
         </div>
@@ -116,7 +119,9 @@
                     <h2>Fully released : 2024-04-15</h2>
                     <p style="padding-left:10px; padding-right:10px;"> Second steam release, made in 1 month with the goal of learning behaviour trees.</p>
                     <h3 style="text-align:left; padding-left:10px;"> I Programmed :</h3>
-                    <p style="text-align:left; padding-left:10px;">• Steam Integration | • AI logic | • Camera Mechanic</p>
+                    <p style="text-align:left; padding-left:10px;">• Steam Integration</p>
+                    <p style="text-align:left; padding-left:10px;">• AI logic</p>
+                    <p style="text-align:left; padding-left:10px;">• Camera Mechanic</p>
                 </div>
             </div>
         </div>
