--- a/GP3.html
+++ b/GP3.html
@@ -28,14 +28,6 @@
 <div>
     <body>
 
-      <div class="corner-container">
-        <a class="hover-text" style="color: #6093ff" ; href="https://www.linkedin.com/in/robin-zeitlin-778a9127a/">Robin Zeitlin | LinkedIn</a>
-        <p></p>
-        <a class="hover-text" style="color: #6093ff" ;href="https://github.com/RobinZeitlin?tab=repositories">Robin Zeitlin | Github</a>
-        <p></p>
-        <a class="hover-text" style="color: #6093ff" ;href="mailto:robin.zeitlin@hotmail.com">robin.zeitlin@hotmail.com</a>
-      </div>
-
         <div class="background-container">
             <img src="images/beige.jpg">
             <img class="moving-image-background" src="images/GP3/placeholderGP3.png">
@@ -53,14 +45,16 @@
                       <iframe width="100%" height="70%" src="https://www.youtube.com/embed/k2MRmKqDr-E?si=6ymBO3dpgx1NGTuv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                       <div class="text-under-video">
 
-                      <div style="display: flex;">
-                        <h1 style="font-size: 8vh; margin: 5%;">FruityWars.</h1>
-                        <div style="margin-left: 10px;">
-                          <p>This project was made togheter in a group of 10 people as our GP3 project at FutureGames the project was made in 7 weeks, in Unreal Engine, with perforce as the source controll.</p>
-                          <p>After completing this project the game was published on Steam 2024-06-15.</p>
-                          <p><a class="hover-text" style="color: #b3c8f5" href="https://store.steampowered.com/app/2990210/Crop_Crusade/">-> FruityWars steam page <-</a></p>
+                        <div class="container">
+                          <div class="header">
+                            <h1 style="font-size: 8vh; margin: 5%;">FruityWars.</h1>
                           </div>
-                      </div>
+                          <div class="content">
+                            <p>This project was made together in a group of 13 people as our GP3 project at FutureGames. The project was developed in 7 weeks using Unreal Engine, with Perforce as the source control.</p>
+                            <p>After completing this project, the game was published on Steam on June 15, 2024.</p>
+                            <p><a class="hover-text" style="color: #b3c8f5" href="https://store.steampowered.com/app/2990210/Crop_Crusade/">-> FruityWars Steam page <-</a></p>
+                          </div>
+                        </div>
                       
                       <div class="box-container">
                         
