--- a/honker.html
+++ b/honker.html
@@ -26,15 +26,6 @@
 </head>
 <div>
     <body>
-
-      <div class="corner-container">
-        <a class="hover-text" style="color: #6093ff" ; href="https://www.linkedin.com/in/robin-zeitlin-778a9127a/">Robin Zeitlin | LinkedIn</a>
-        <p></p>
-        <a class="hover-text" style="color: #6093ff" ;href="https://github.com/RobinZeitlin?tab=repositories">Robin Zeitlin | Github</a>
-        <p></p>
-        <a class="hover-text" style="color: #6093ff" ;href="mailto:robin.zeitlin@hotmail.com">robin.zeitlin@hotmail.com</a>
-      </div>
-
         <div class="background-container">
             <img src="images/beige.jpg">
             <img class="moving-image-background" src="images/Honker/honkershowcase.png">
@@ -52,15 +43,15 @@
                       <iframe width="100%" height="70%" src="https://www.youtube.com/embed/d7eUiRr1EdA?si=MrMF1wHYduL4M6dK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                       <div class="text-under-video">
 
-                      <div style="display: flex;">
-                        <h1 style="font-size: 8vh; margin: 5%;">Honker.</h1>
-                        <div style="margin-left: 10px;">
-                          <p>My second game in my journey to become a better game developer by releasing one game everymonth, this project I decided to focus on learning "Unity's Entity System".</p>
-                          <p>This game is complete and will be published on steam on the 15th of may.</p>
-                          <p><a class="hover-text" style="color: #b3c8f5" href="https://github.com/RobinZeitlin/May-24">-> Github Repository <-</a></p>
-                          <p><a class="hover-text" style="color: #b3c8f5" href="https://store.steampowered.com/app/2875910/Honker/">-> Honker steam page <-</a></p>
+                        <div class="container">
+                          <h1 class="header" style="font-size: 8vh; margin: 5%;">Honker.</h1>
+                          <div class="content" style="margin-left: 10px;">
+                            <p>My second game in my journey to become a better game developer by releasing one game every month. For this project, I decided to focus on learning "Unity's Entity System".</p>
+                            <p>This game is complete and will be published on Steam on May 15th.</p>
+                            <p><a class="hover-text" style="color: #b3c8f5" href="https://github.com/RobinZeitlin/May-24">-> Github Repository <-</a></p>
+                            <p><a class="hover-text" style="color: #b3c8f5" href="https://store.steampowered.com/app/2875910/Honker/">-> Honker Steam page <-</a></p>
                           </div>
-                      </div>
+                        </div>
                       
                       <div class="box-container">
                         
