--- a/aboutme.html
+++ b/aboutme.html
@@ -80,17 +80,13 @@
                         <div class="intro-text">
                           <h2>Personal Interests</h2>
                           <p>Im super into board games/roleplaying games. It all started with munchkin, but it quickly branched onto DND that ive been playing on and off for the past 4-5 years. And due to the fact that me and my friends had no previous experience with roleplaying games, I took it upon myself to learn some of the basic rules, and from then on ive been stuck as the groups Dungeon Master. This grew into a hobby of 3d printing and painting my own minatures, and constructing a small playing field using an old monitor to make the game feel more alive.</p>
-                          <p>And of course I love playing video games. It all started with Pokemon on a Red GameBoy and from then on I just havent been able to seperate myself from video games. My alltime favourite game is without a doubt Minecraft which I think has left a huge impact on how I design things today as ive always been known as the builder in my friend groups.</p>
+                          <p>And of course I love playing video games. It all started with Pokemon on a Red GameBoy and from then on I just havent been able to seperate myself from video games. My alltime favourite game is without a doubt Minecraft.
                         </div>
                         <div class="information-image">
                             <img src="https://via.placeholder.com/400" alt="Robin Zeitlin">
                          </div>
                     </div>
-                      
-                    <div class="section testimonials">
-                      <h2>Testimonials</h2>
-                      <p class="testimonial">"Working with [Your Name] was a pleasure. They brought a high level of creativity and expertise to our project." - [Colleague's Name]</p>
-                  </div>
+                    
 
                         <div class="my-line"></div>
                           <p></p>
